--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,107 @@
+/* ==================================================
+GENERIC
+===================================================== */
+html {
+    box-sizing: border-box
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+
+/* ==================================================
+GENERIC
+===================================================== */
+
+/* -----------------Base---------------------- */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper{
+    max-width: 1080px;
+    margin: 0 auto;
+}
+
+/* ------------------ Éléments textes ------------------ */
+
+h1{
+    font-family: "roboto";
+    font-size: 36px;
+    font-weight:300;
+}
+
+h2{
+    font-family: "roboto";
+    font-size: 18px;
+    font-weight:bold;
+}
+
+h3{
+    font-family: "roboto";
+    font-size: 36px;
+    font-weight: normal;
+}
+
+h3 .bold{
+    font-weight: 800;
+}
+
+p{
+    font-family: "rotobo";
+    font-size: 18px;
+    font-weight: normal;
+}
+
+
+/* ==================================================
+COMPONENTS
+===================================================== */
+
+/* ------------------ nav ------------------ */
+
+nav .wrapper{
+    display: flex;
+    align-items: center;
+    height: 80px;
+    justify-content:space-between;
+}    
+
+nav a{
+    font-family: "roboto";
+    font-size: 36px;
+    font-weight: 800;
+    color: white;
+
+
+       display: flex;
+    align-items: center;
+    
+
+    height: 80px;
+    text-decoration: none;
+}
+
+nav li a{
+    font-size: 18px;
+}
+
+nav{
+    background-color: #F26C25;
+
+}
+
+
+
+
+
+
+
+
 
 .facebook a:hover{
     background-color: #0a66c2;
