--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,18 @@ justify-content: space-between;
 gap: 20px;
 }
 
+.facebook{
+    background-color: #404041;
+}
+
+.twitter{
+    background-color: #404041;
+}
+
+.linkedin{
+    background-color: #404041;
+}
+
 .facebook a:hover {
   background-color: #0a66c2;
 }
